--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
         <h1>ARGO</h1>
       </div>
       <div class="placeholder long-placeholder"></div>
-      <div class="content">
-        <h2>ARGO THEME Lorem ipsum dolor sit amet, consectetur adipisicing.</h2>
+      <div class="commercial">
+        <h2>ARGO THEME Lorem dolor sit amet</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quis veniam ab quidem error optio et necessitatibus, dolore rerum reprehenderit, eum amet inventore reiciendis. Quia.</p>
       </div>
       <div class="about">
         <i class="far fa-comment"></i>
-        <span>About Us</span>
+        <div class="label">About Us</div>
       </div>
       <div class="imageholder imageholder1"></div>
       <div class="imageholder imageholder2"></div>
       <div class="services">
         <i class="far fa-lightbulb"></i>
-        <span>Services</span>
+        <div class="label">Services</div>
       </div>
       <div class="portfolio">
         <i class="far fa-image"></i>
-        <span>Portfolio</span>
+        <div class="label">Portfolio</div>
       </div>
       <div class="imageholder imageholder3"></div>
       <div class="imageholder imageholder4"></div>
       <div class="blog">
         <i class="far fa-newspaper"></i>
-        <span>Blog</span>
+        <div class="label">Blog</div>
       </div>
       <div class="placeholder middle-placeholder"></div>
       <div class="imageholder imageholder5"></div>
       <div class="imageholder imageholder6"></div>
       <div class="contacts">
         <i class="far fa-paper-plane"></i>
-        <span>Contact Us</span>
+        <div class="label">Contact Us</div>
       </div>
       <div class="placeholder short-placeholder"></div>
     </div>
