--- a/index.html
+++ b/index.html
@@ -21,42 +21,55 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quis veniam ab quidem error optio et necessitatibus, dolore rerum reprehenderit, eum amet inventore reiciendis. Quia.</p>
       </div>
       <div class="about">
-        <i class="far fa-comment"></i>
-        <div class="label">About Us</div>
+        <a href="#" class="block-links">
+          <i class="far fa-comment"></i>
+          <div class="label">About Us</div>
+        </a>
       </div>
       <div class="imageholder imageholder1"></div>
       <div class="imageholder imageholder2"></div>
       <div class="services">
-        <i class="far fa-lightbulb"></i>
-        <div class="label">Services</div>
+        <a href="#" class="block-links">
+          <i class="far fa-lightbulb"></i>
+          <div class="label">Services</div>
+        </a>
       </div>
       <div class="portfolio">
-        <i class="far fa-image"></i>
-        <div class="label">Portfolio</div>
+        <a href="#" class="block-links">
+          <i class="far fa-image"></i>
+          <div class="label">Portfolio</div>
+        </a>
       </div>
       <div class="imageholder imageholder3"></div>
       <div class="imageholder imageholder4"></div>
       <div class="blog">
-        <i class="far fa-newspaper"></i>
-        <div class="label">Blog</div>
+        <a href="#" class="block-links">
+          <i class="far fa-newspaper"></i>
+          <div class="label">Blog</div>
+        </a>
       </div>
       <div class="placeholder middle-placeholder"></div>
       <div class="imageholder imageholder5"></div>
       <div class="imageholder imageholder6"></div>
       <div class="contacts">
-        <i class="far fa-paper-plane"></i>
-        <div class="label">Contact Us</div>
+        <a href="#" class="block-links">
+          <i class="far fa-paper-plane"></i>
+          <div class="label">Contact Us</div>
+        </a>
       </div>
       <div class="placeholder short-placeholder"></div>
     </div>
   </section>
+
   <footer>
-    <div class="brand">ARGO</div>
-    <div class="footer-menu-items"><i class="far fa-comment"></i><span>About Us</span></div>
-    <div class="footer-menu-items"><i class="far fa-lightbulb"></i><span>Services</span></div>
-    <div class="footer-menu-items"><i class="far fa-image"></i><span>Portfolio</span></div>
-    <div class="footer-menu-items"><i class="far fa-newspaper"></i><span>Blog</span></div>
-    <div class="footer-menu-items"><i class="far fa-paper-plane"></i><span>Contact Us</span></div>
+    <div class="footer-block">
+      <div class="brand">ARGO</div>
+      <div class="footer-menu-items"><i class="far fa-comment"></i><a href="#">About Us</a></div>
+      <div class="footer-menu-items"><i class="far fa-lightbulb"></i><a href="#">Services</a></div>
+      <div class="footer-menu-items"><i class="far fa-image"></i><a href="#">Portfolio</a></div>
+      <div class="footer-menu-items"><i class="far fa-newspaper"></i><a href="#">Blog</a></div>
+      <div class="footer-menu-items"><i class="far fa-paper-plane"></i><a href="#">Contact Us</a></div>
+    </div>
   </footer>
   </div>
 
