--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <title>ARGO</title>
 </head>
 <body>
-  <div id="root">
+  <div class="root">
   <section class="content">
     <div class="container">
       <div class="logo">
         <h1>ARGO</h1>
       </div>
-      <div class="placeholder long-placeholder"></div>
       <div class="commercial">
         <h2>ARGO THEME Lorem dolor sit amet</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta quis veniam ab quidem error optio et necessitatibus, dolore rerum reprehenderit, eum amet inventore reiciendis. Quia.</p>
@@ -48,7 +47,6 @@
           <div class="label">Blog</div>
         </a>
       </div>
-      <div class="placeholder middle-placeholder"></div>
       <div class="imageholder imageholder5"></div>
       <div class="imageholder imageholder6"></div>
       <div class="contacts">
@@ -57,7 +55,6 @@
           <div class="label">Contact Us</div>
         </a>
       </div>
-      <div class="placeholder short-placeholder"></div>
     </div>
   </section>
 
